@@ -2,9 +2,26 @@
 
   Breakorino
   
-  A break out game for dogm128 graphics module.
-  Written by Oliver Kraus
+  A little game for dogm128 graphics module.
+
+  (c) 2010 Oliver Kraus (olikraus@gmail.com)
   
+  This file is part of the dogm128 Arduino library.
+
+  The dogm128 Arduino library is free software: you can redistribute it and/or modify
+  it under the terms of the Lesser GNU General Public License as published by
+  the Free Software Foundation, either version 3 of the License, or
+  (at your option) any later version.
+
+  The dogm128 Arduino library is distributed in the hope that it will be useful,
+  but WITHOUT ANY WARRANTY; without even the implied warranty of
+  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  Lesser GNU General Public License for more details.
+
+  You should have received a copy of the Lesser GNU General Public License
+  along with dogm128.  If not, see <http://www.gnu.org/licenses/>.
+
+
   SCL (SPI Clock)   Pin 13
   SI (MOSI)         Pin 11
   CS (Chip Select)  Pin 10
@@ -37,7 +54,7 @@ void loop() {
   do{
     bo_Draw();
   } while( dogm.next() );
-  dog_delay(1);
+  dog_Delay(1);
   sensorValue = analogRead(sensorPin);
   bo_SetX(sensorValue>>2);
   bo_Step();  
