@@ -22,4 +22,6 @@ dogm128 ChangeLog
 	* Added SPI abstraction layer (dogmspi.c)
 	* More generic delay procedure (dog_delay())
 	* clrHLine, xorHLine
+2010-xx-xx	v1.04	
+	* Renamed dog_delay() --> dog_Delay() 
 	
